--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^4.0.8",
     "react-router-dom": "^5.0.1",
